Execute notifications from the training as safe
What

This commit ensures that Velocity expressions from the existing
Notifications training (MID-325) can be executed in the safe mode.

This required some changes:

- Allowing more methods and objects: QName plus some methods in
MidPointFunctions in this git repo, and more in related commit
in prism git repo.
- Adapted checking of allowed methods in SafeIntrospectorImpl, as there
are some Velocity-related quirks there. Now it checks all the methods
in the class hierarchy plus does an extra check starting from the real
class where the method is called.

Task: 12389